# test

./: README.md
c++/: cling_opencv_boost.ipynb  includeLibraries.h  tongjidanci.cpp
c++/CMakeProject1/: CMakeLists.txt
c++/CMakeProject1/CMakeProject1/: CMakeLists.txt  demo.cpp
c++/CMakeProject1/cpp_how_to_program_9th/: CMakeLists.txt  base_plus_commission_employee_inheritance.cpp  base_plus_commission_employee_inheritance.h  base_plus_commission_employee_inheritance_test.cpp  base_plus_commission_employee_no_inheritance.cpp  base_plus_commission_employee_no_inheritance.h  commission_employee.cpp  commission_employee.h
c++/CMakeProject1/cpp_how_to_program_9th/test/: base_plus_commission_employee_no_inheritance_test.cpp  commission_employee_test.cpp
c++/CMakeProject1/query/: CMakeLists.txt  TextQuery.cpp  boost_string_demo.cpp  boost_timer_demo.cpp  fib.cpp  test.cpp  word_count.cpp
ipynb/machinelearning/: 數據分類點圖.ipynb
oracle/java/: javaconnectoracledatabase.java
oracle/python/: cx_Oracle.ipynb  cx_Oracle.py
python/: matliblpottest.py  test.py
python/ipynb/: PrintCommandsLinux.ipynb
python/pandas/: googlefinance.py
python/postgresql/: conn_postgresql.py
sql/: column_split.sql  createtemptablespace.sql
windows/: HelloWin10.c  hellowin_3_1_2.c
